---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 21/11/25
  Features:
    - Hex cores now emit flying text when they make a trade.  Can be disabled in the mod's player settings.
    - Hex cores now emit light, the color of which reacts to circuit signals.
        Default colors adjustable in mod settings!
  Minor Features:
    - Added "total belting distance", "sink / generator", and "dungeon" info to the output of /simple-trade-loops, as they are fast calculations.
  Balancing:
    - Made the stack inserter item buff require one less upgrade to have another effect on top of the initial unlock.
    - Slightly increased the range of dungeon gun turrets.
    - Slightly decreased the range of dungeon flamethrower and laser turrets.
    - Decreased the damage of dungeon turrets.
    - Increased the minimum distance that dungeons can be from the center hex by 1 hex tile.
    - Lowered the default mod settings for the frequencies of dungeons on each planet.
    - Made the default mod setting for the cost multiplier of supercharging 5x cheaper.
    - Slightly increased ore richness.
    - Changed the quest reward of "Catalog Initiate" which gives +10% trade productivity to give +5% instead.
    - Changed the default mod settings for planet-based trade productivity bonuses to start from 0% on Nauvis instead of -20%, with the intention to reduce confusion for new players of the mod.
        The default settings are now:
          Nauvis = 0%
          Vulcanus = 5%
          Fulgora = 10%
          Gleba = 15%
          Aquilo = 20%
    - Revised item rank up requirements:
        Bronze - unchanged (buy and sell item once)
        Silver - buy this item using a trade with at least +30% productivity
        Gold - unchanged (electrocute an enemy unit near a trade involving this item with +70% productivity)
        Red - sell this item using a trade with at least +120% productivity
  Changes: