@@ -6,6 +6,7 @@ hexaprism-coin=Hexaprism Coin
 hexaprism=Hexaprism
 claim-tool=Claim Hexes
 delete-core-tool=Delete Hex Cores
+hexport-tool=Enable Hexports
 tesla-discharge-defense-equipment=Tesla discharge defense
 disintegrator-capsule=Disintegrator capsule
 tesla-destroyer-capsule=Tesla destroyer capsule
@@ -29,6 +30,7 @@ hexaprism-coin=[font=heading-1][color=blue]TIER 4 COIN[.color][.font]\nCan be tr
 hexaprism=A crystalline shard of pure hexagonal energy. Only the most experienced engineer can make use of this.
 claim-tool=Claim all hex cores in the selected area.
 delete-core-tool=Delete all hex cores in the selected area.
+hexport-tool=Enable all hexports in the selected area, or disable by reverse-selecting (RMB and drag).
 disintegrator-capsule=Deploys disintegrators to melt through your obstacles.
 tesla-discharge-defense-equipment=Damages, pushes back and stuns nearby enemies automatically.
 tesla-destroyer-capsule=One of the more advanced combat robots. Follows the player and shoots arcing bolts of electricity at nearby enemies.
@@ -119,6 +121,7 @@ teleport-to-hex-core=Teleport to Hex Core
 [shortcut-name]
 claim-tool=Claim Hexes
 delete-core-tool=Delete Hex Cores
+hexport-tool=Enable Hexports
 
 [mod-setting-name]
 hextorio-claimed-hex-tile=Claimed Hex Tile
@@ -590,6 +593,7 @@ item-rank-too-low=That item is not a high enough rank for this.
 current-hex-pool-size=Current hex pool size: __1__
 invalid-quality-selected=[color=red]The value you selected is not a quality. Find qualities in the "Unsorted" category.[.color]
 quality-bounds-adjusted=[color=yellow]The selected quality bounds were adjusted based on either currently unlocked qualities or the hex core's current quality.[.color]
+hexports-not-unlocked=Hexports have not yet been unlocked. They are unlocked as a quest reward!
 core-deletion-not-unlocked=Hex core deletion has not yet been unlocked. It is unlocked as a quest reward!
 hex-cores-not-deleted=Some of the selected hex cores were not deleted. Do you have enough coins? Note: You cannot delete the core at spawn or unclaimed hex cores.
 trades-exported=Wrote encoded JSON of all trades to __1__
