@@ -5,6 +5,7 @@ Date: 21/11/25
     - Hex cores now emit flying text when they make a trade.  Can be disabled in the mod's player settings.
     - Hex cores now emit light, the color of which reacts to circuit signals.
         Default colors adjustable in mod settings!
+    - Added Hexport selection tool, allowing for mass enabling or disabling of hexports.
   Minor Features:
     - Added "total belting distance", "sink / generator", and "dungeon" info to the output of /simple-trade-loops, as they are fast calculations.
   Balancing:
